# SJH_Quiz

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  test.db
alembic/: env.py
alembic/versions/: 0c0ffb2c2e09_initial_migration.py  214859977342_create_model_userquizregistration.py  255bb2cbf09f_initial_migration.py  c30d4f8508f4_initial_migration.py  df93008f8a3a_create_model_userquizattempt.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  choice.py  question.py  quiz.py  users.py
app/core/: config.py  security.py
app/crud/: auth.py  choice.py  question.py  quiz.py  user.py
app/db/: session.py
app/models/: __init__.py  choice.py  question.py  quiz.py  user.py
app/schemas/: auth.py  choice.py  question.py  quiz.py  user.py
app/utils/: utils.py
tests/: conftest.py  test_main.py
